# dag-bench

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/: CODEOWNERS
campaigns/: campaign_001_initial_import.yaml
docs/: contributing.md  sources.md
scripts/: generate_index.py  import_additional_dags.py  import_classic_benchmarks.py  import_from_saga.py  import_networking_dags.py  import_new_synthetics.py  import_random_dags.py  recompute_stats.py  validate_all.py
src/dagbench/: __init__.py  catalog.py  cli.py  costs.py  html_docs.py  loader.py  networks.py  schema.py  stats.py  validate.py
src/dagbench/converters/: __init__.py  csv_conv.py  dot.py  manual.py  stg.py
src/dagbench/generators/: __init__.py  classic.py  random_dag.py
tests/: test_converters.py  test_costs.py  test_generators_import.py  test_loader.py  test_random_dag.py  test_schema.py  test_stats.py  test_validate.py
workflows/: index.yaml
workflows/agriculture_iot/crop_disease/: docs.html  graph.json  metadata.yaml
workflows/agriculture_iot/flockfocus_feeder/: docs.html  graph.json  metadata.yaml
workflows/agriculture_iot/greenhouse_control/: docs.html  graph.json  metadata.yaml
workflows/agriculture_iot/livestock_monitoring/: docs.html  graph.json  metadata.yaml
workflows/agriculture_iot/precision_irrigation/: docs.html  graph.json  metadata.yaml
workflows/classic_benchmarks/cholesky_4/: docs.html  graph.json  metadata.yaml
workflows/classic_benchmarks/cholesky_5/: docs.html  graph.json  metadata.yaml
workflows/classic_benchmarks/cholesky_6/: docs.html  (+2 more)
(+299 files in other folders)
